# distnet-core

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
include/: keypair.h  node.h  socket.h
src/: jni.cpp  keypair.cpp  main.cpp  node.cpp  socket.cpp
